Correção da disposição do cardview

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="btn_login_fb">Entre com o Facebook</string>
     <string name="btn_registrar">Criar Conta</string>
     <string name="btn_recuperar_senha">Lembrar Senha</string>
-    <string name="btn_help">Esqueceu ou não tem login?</string>
+    <string name="btn_help">Esqueceu ou não tem acesso?</string>
 
     <!-- TODO: Textos hint -->
     <string name="hint_nome">Seu nome e sobrenome</string>
