Tela de datalhes da cerveja

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,6 +37,8 @@
 
     <string name="action_settings">Settings</string>
 
+    <string name="action_fav">Adcionar aos Favoritos</string>
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
